--- a/project/res/layout/include_amenities.xml
+++ b/project/res/layout/include_amenities.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/amenities_scroll_view"
-    android:layout_width="fill_parent"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:fillViewport="true" >
 
@@ -11,7 +11,7 @@
 
         <TextView
             android:id="@+id/amenities_none_text"
-            android:layout_height="fill_parent"
+            android:layout_height="match_parent"
             android:layout_marginBottom="3dp"
             android:layout_marginLeft="12dp"
             android:layout_marginTop="3dp"
@@ -20,7 +20,7 @@
 
         <TableRow
             android:id="@+id/amenities_table_row"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layoutAnimation="@anim/layout_wave_scale" />
     </TableLayout>
