--- a/project/res/layout-sw600dp/fragment_tablet_hotel_details.xml
+++ b/project/res/layout-sw600dp/fragment_tablet_hotel_details.xml
@@ -260,7 +260,7 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentBottom="true"
                     android:layout_centerHorizontal="true"
-                    android:layout_marginBottom="18dp">
+                    android:layout_marginBottom="@dimen/hotel_details_star_rating_margin">
 
                     <com.expedia.bookings.widget.TextView
                         android:id="@+id/not_rated_text_view"
@@ -300,7 +300,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_above="@id/star_rating_container"
-                    android:layout_marginBottom="10dp"
+                    android:layout_marginBottom="@dimen/hotel_details_hotel_name_margin"
                     android:gravity="center"
                     android:ellipsize="end"
                     android:includeFontPadding="false"
