--- a/project/res/values-sw600dp/dimens.xml
+++ b/project/res/values-sw600dp/dimens.xml
@@ -90,7 +90,8 @@
     <dimen name="add_rate_button_min_width">48dp</dimen>
     <dimen name="tablet_details_compact_header_height">57dp</dimen>
     <dimen name="tablet_reviews_header_height">112dp</dimen>
-
+    <dimen name="hotel_details_star_rating_margin">15dp</dimen>
+    <dimen name="hotel_details_hotel_name_margin">4dp</dimen>
     <dimen name="hotel_details_reviews_section_height">72dp</dimen>
     <dimen name="hotel_details_reviews_section_top_padding">0dp</dimen>
     <dimen name="hotel_details_ring_size">32dp</dimen>
