--- a/project/res/values-sw600dp/styles.xml
+++ b/project/res/values-sw600dp/styles.xml
@@ -49,4 +49,16 @@
         <item name="android:paddingRight">20dp</item>
     </style>
 
+    <style name="RatingBar.Star.HotelDetails">
+        <item name="android:progressDrawable">@drawable/ratingbar_star_hotel_details_small</item>
+        <item name="android:minHeight">13dp</item>
+        <item name="android:maxHeight">13dp</item>
+    </style>
+
+    <style name="RatingBar.UserReview.HotelDetails">
+        <item name="android:progressDrawable">@drawable/ratingbar_userreview_hotel_details_small</item>
+        <item name="android:minHeight">17dp</item>
+        <item name="android:maxHeight">17dp</item>
+    </style>
+
 </resources>
