--- a/project/res/values/tablet_themes.xml
+++ b/project/res/values/tablet_themes.xml
@@ -167,6 +167,20 @@
 
     <style name="V2.Widget.TextView" />
 
+    <style name="V2.Widget.TextView.AddToTrip">
+        <item name="android:text">@string/room_rate_button_add_to_trip</item>
+        <item name="android:textSize">15dp</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textAllCaps">true</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:background">@drawable/tablet_hotel_room_add_button</item>
+        <item name="android:includeFontPadding">false</item>
+        <item name="android:paddingLeft">12dp</item>
+        <item name="android:paddingRight">12dp</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:gravity">center</item>
+    </style>
+
     <style name="V2.Widget.TextView.FlightDetailsHeader">
         <item name="android:textSize">20sp</item>
         <item name="android:textColor">#333</item>
