--- a/project/res/values/tablet_themes.xml
+++ b/project/res/values/tablet_themes.xml
@@ -102,9 +102,9 @@
         <item name="android:windowContentOverlay">@null</item>
     </style>
 
-    <style name="V2.Theme.Activity.TabletResults.WebActivity">
+    <style name="V2.Theme.Activity.TabletWeb">
         <item name="android:windowActionBarOverlay">false</item>
-        <item name="android:actionBarStyle">@style/V2.Widget.ActionBar.TabletLaunch</item>
+        <item name="android:actionBarStyle">@style/V2.Widget.ActionBar.TabletWeb</item>
     </style>
 
 
@@ -135,6 +135,12 @@
 
     <style name="V2.Widget.ActionBar.TabletCheckout">
         <item name="android:displayOptions">showHome|useLogo|homeAsUp|showCustom</item>
+    </style>
+
+    <style name="V2.Widget.ActionBar.TabletWeb">
+        <item name="android:displayOptions">showHome|useLogo|homeAsUp|showTitle</item>
+        <item name="android:background">@drawable/bg_action_bar_flight_top</item>
+        <item name="android:titleTextStyle">@style/FlightActionBarTextAppearance</item>
     </style>
 
     <style name="V2.Widget.ActionBar.ActionButton.Overflow" parent="@android:style/Widget.Holo.Light.ActionButton.Overflow">
