--- a/project/res/layout/snippet_tablet_room_rate_add_select.xml
+++ b/project/res/layout/snippet_tablet_room_rate_add_select.xml
@@ -37,42 +37,32 @@
             app:textStyle="light" />
     </LinearLayout>
 
-    <TextView
+    <com.expedia.bookings.widget.TextView
         android:id="@+id/text_price_per_night"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:layout_marginRight="24dp"
+        android:layout_marginRight="@dimen/hotel_room_rate_price_margin"
         android:paddingTop="@dimen/non_refundable_tweak"
-        android:textSize="17sp" />
+        android:textSize="@dimen/hotel_room_rate_price_text_size"
+        app:textStyle="light" />
 
     <FrameLayout
-        android:layout_width="128dp"
-        android:layout_height="35dp"
+        android:layout_width="@dimen/hotel_room_rate_button_width"
+        android:layout_height="@dimen/hotel_room_rate_button_height"
         android:layout_gravity="center_vertical">
 
         <com.expedia.bookings.widget.AutoResizeTextView
             android:id="@+id/room_rate_button_add"
-            style="@style/V2.Widget.TextView.AddToTrip"
+            style="@style/V2.Widget.TextView.RateButton.AddToTrip"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-
+            android:layout_height="match_parent"/>
 
         <com.expedia.bookings.widget.AutoResizeTextView
             android:id="@+id/room_rate_button_select"
+            style="@style/V2.Widget.TextView.RateButton.SelectRoom"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:background="@drawable/tablet_hotel_room_select_button"
-            android:gravity="center"
-            android:includeFontPadding="false"
-            android:paddingLeft="12dp"
-            android:paddingRight="12dp"
-            android:text="@string/room_rate_button_select_room"
-            android:textAllCaps="true"
-            android:textColor="@android:color/white"
-            android:textSize="15sp"
-            android:textStyle="bold" />
+            android:layout_height="match_parent"/>
 
     </FrameLayout>
 </LinearLayout>
