--- a/project/res/values-sw600dp/styles.xml
+++ b/project/res/values-sw600dp/styles.xml
@@ -61,4 +61,8 @@
         <item name="android:maxHeight">17dp</item>
     </style>
 
+    <style name="V2.Fragment.Tablet.Confirmation">
+        <item name="android:layout_gravity">center_horizontal</item>
+    </style>
+
 </resources>
